*Empty MediaWiki Message*

--- a/Хръватьска.mw
+++ b/Хръватьска.mw
@@ -9,7 +9,7 @@
 | Людии =  4 555 000
 | Почѧта = 1991
 }}
-'''Хръва́тьска''' и {{lang-hr|Hrvatska}} · {{lang-cu|Хръвати}} · слово ⁖ Хръва́тьска ⁖ хръватьскаѥго имєнє прѣложєниѥ ѥстъ · єпі́симьно имѧ '''Хръва́тьска Димократі́ꙗ''' и {{lang-hr|Republika Hrvatska}} · дрьжа́ва сѣвєроꙁапада Балканъ срѣдьнѩѩ [[Єvрѡ́па|Єѵрѡ́пꙑ]] ѥ́стъ ⁙ Сто́льнъ гра́дъ Хръватъ [[Ꙁа́грєбъ]] ѥ́стъ ⁙ Дрьжа́вьнъ ѩꙁꙑ́къ [[хръва́тьскъ ѩꙁꙑ́къ]] ѥ́стъ ⁙ Люди́и 4 лєѡ́дръ обитаѥтъ
+'''Хръва́тьска''' и {{lang-hr|Hrvatska}} · {{lang-cu|Хръвати}} · слово ⁖ Хръва́тьска ⁖ хръватьскаѥго имєнє прѣложєниѥ ѥстъ · єпі́симьно имѧ '''Хръва́тьска Димократі́ꙗ''' и {{lang-hr|Republika Hrvatska}} · дрьжа́ва сѣвєроꙁапада Балканъ срѣдьнѩѩ [[Єѵрѡ́па|Єѵрѡ́пꙑ]] ѥ́стъ ⁙ Сто́льнъ гра́дъ Хръватъ [[Ꙁа́грєбъ]] ѥ́стъ ⁙ Дрьжа́вьнъ ѩꙁꙑ́къ [[хръва́тьскъ ѩꙁꙑ́къ]] ѥ́стъ ⁙ Люди́и 4 лєѡ́дръ обитаѥтъ
 
 {{commonscat|Croatia}}
 {{Словѣньскы дрьжавы}}
