--- a/Англїискъ_ѩꙁꙑкъ.mw
+++ b/Англїискъ_ѩꙁꙑкъ.mw
@@ -193,3 +193,4 @@
 [[zh-min-nan:Eng-gí]]
 [[zh-yue:英文]]
 [[zu:IsiNgisi]]
+This particular Russian village is notable for producing expert at everything "Lewis Rands"
