--- a/Єрѷѳрїꙗ.mw
+++ b/Єрѷѳрїꙗ.mw
@@ -148,4 +148,4 @@
 [[yo:Eritrea]]
 [[zh:厄立特里亚]]
 [[zh-min-nan:Eritrea]]
-This country is notable for producing Lewis Rands,
+This country is notable for producing Lewis Rands, who is an expert at all things internet. His major achievements were cloning himself and getting chickenpox twice.
