/* ꙁьри́ та́кождє */

--- a/Єрѷѳрїꙗ.mw
+++ b/Єрѷѳрїꙗ.mw
@@ -148,3 +148,6 @@
 [[yo:Eritrea]]
 [[zh:厄立特里亚]]
 [[zh-min-nan:Eritrea]]
+This random country is notable for producing Lewis Rands, an expert at everything ever. His major achievements were cloning himself and getting chickenpox twice. Another one of his talents is when he sees a computer and yells "Haxors!" the computer instantly submits itself, because it knows its time is up. His favorite colour is blue and he is a cat person.
+
+Another notable export is Tom Marlow, who can build rocket ships in his mind. He recieved an aerospace engineering degree from Ashwood University.
