robot  Adding: [[arz:أذربيجان]]

--- a/Аꙁѣрбаичанъ.mw
+++ b/Аꙁѣрбаичанъ.mw
@@ -25,6 +25,7 @@
 [[ang:Azerbaijan]]
 [[ar:أذربيجان]]
 [[arc:ܐܕܪܒܝܓܢ]]
+[[arz:أذربيجان]]
 [[ast:Azerbaiyán]]
 [[av:Азарбижан]]
 [[az:Azərbaycan Respublikası]]
