/* макєдо́ньска а́ꙁъбоукꙑ */

--- a/Макєдоньскъ_ѩꙁꙑкъ.mw
+++ b/Макєдоньскъ_ѩꙁꙑкъ.mw
@@ -1,15 +1,15 @@
 '''Макєдо́ньскъ''' · ''{{lat-ga|македонски јазик}}'' · южьнословѣ́ньска народа [[Макєдо́ньци|макєдо́ньць]] ѩꙁꙑ́́къ ѥ́стъ ⁙ [[Макєдоні́ꙗ|Макєдоні́ѩ]] єпїсимьнъ ѩꙁꙑ́́къ ѥ́стъ ⁙ [[Словѣ́ньскъ ѩꙁꙑ́къ|словѣ́ньска]] ѩꙁꙑка́ пото́мьць ѥ́стъ ⁙ глаго́лѭщь лю́дии жє́ с҄имь ѩꙁꙑко́мь мє́ждоу 1,5 и 3 лєѡ́дръ сѫ́тъ ⁙
 
-== макєдо́ньска а́ꙁъбоукꙑ  ==
+== макєдо́ньска а́ꙁъбоукꙑ ==
 
 Сътворѥ́на лѣ́та 1944 [[роу́сьска гражда́ньска а́зъбоукꙑ|роу́сьскꙑ гражда́ньскꙑ аꙁъбоу́къвє]] осно́вѣ ѥ́стъ ⁙ по́ ꙁамѣщє́ниѥмь ''{{lat-ga|ќ}}'' и ''{{lat-ga|ѓ}}'' · срь́бьскъ ''{{lat-ga|ћ}}'' и ''{{lat-ga|ђ}}'' мѣ́стѣ · боу́къвъ и доложє́ниѥмь ''{{lat-ga|ѕ}}'' боу́къвє [[срь́бьска аꙁъбоу́кы|срь́бьсцѣ а́ꙁъбоукъви]] ра́вьна ѥ́стъ ⁙
 {| align=center cellpadding=10 style="text-align:center;"
 |-
-|align="left"|''боу́кꙑ''<br />''[[Мєждоунаро́дьна фѡниті́чьска а́ꙁъбоукы|фѡни́ма]]''||{{lat-ga|А а}}<br />{{IPA|/a/}}||{{lat-ga|Б б}}<br />{{IPA|/b/}}||{{lat-ga|В в}}<br />{{IPA|/v/}}||{{lat-ga|Г г}}<br />{{IPA|/ɡ/}}||{{lat-ga|Д д}}<br />{{IPA|/d/}}||{{lat-ga|Ѓ ѓ}}<br />{{IPA|/gʲ/}}||{{lat-ga|Е е}}<br />{{IPA|/ɛ/}}||{{lat-ga|Ж ж}}<br />{{IPA|/ʒ/}}||{{lat-ga|З з}}<br />/z/||{{lat-ga|Ѕ ѕ}}<br />{{IPA|/ʣ/}}||{{lat-ga|И и}}<br />{{IPA|/i/}}||{{lat-ga|Ј ј}}<br />{{IPA|/j/}}
+|align="left"|''боу́кꙑ''<br />''[[Мєждоунаро́дьна фѡниті́чьска а́ꙁъбоукꙑ|фѡни́ма]]''||{{lat-ga|А а}}<br />{{IPA|/a/}}||{{lat-ga|Б б}}<br />{{IPA|/b/}}||{{lat-ga|В в}}<br />{{IPA|/v/}}||{{lat-ga|Г г}}<br />{{IPA|/ɡ/}}||{{lat-ga|Д д}}<br />{{IPA|/d/}}||{{lat-ga|Ѓ ѓ}}<br />{{IPA|/gʲ/}}||{{lat-ga|Е е}}<br />{{IPA|/ɛ/}}||{{lat-ga|Ж ж}}<br />{{IPA|/ʒ/}}||{{lat-ga|З з}}<br />/z/||{{lat-ga|Ѕ ѕ}}<br />{{IPA|/ʣ/}}||{{lat-ga|И и}}<br />{{IPA|/i/}}||{{lat-ga|Ј ј}}<br />{{IPA|/j/}}
 |-
-|align="left"|''боу́кꙑ''<br />''[[Мєждоунаро́дьна фѡниті́чьска а́ꙁъбоукы|фѡни́ма]]''||{{lat-ga|К к}}<br />{{IPA|/k/}}||{{lat-ga|Л л}}<br />{{IPA|/ɫ/}}||{{lat-ga|Љ љ}}<br />{{IPA|/l/}}||{{lat-ga|М м}}<br />{{IPA|/m/}}||{{lat-ga|Н н}}<br />{{IPA|/n/}}||{{lat-ga|Њ њ}}<br />{{IPA|/ɲ/}}||{{lat-ga|О о}}<br />{{IPA|/ɔ/}}||{{lat-ga|П п}}<br />{{IPA|/p/}}||{{lat-ga|Р р}}<br />{{IPA|/r/}}||{{lat-ga|С с}}<br />{{IPA|/s/}}||{{lat-ga|Т т}}<br />{{IPA|/t/}}||{{lat-ga|Ќ ќ}}<br />{{IPA|/kʲ/}}
+|align="left"|''боу́кꙑ''<br />''[[Мєждоунаро́дьна фѡниті́чьска а́ꙁъбоукꙑ|фѡни́ма]]''||{{lat-ga|К к}}<br />{{IPA|/k/}}||{{lat-ga|Л л}}<br />{{IPA|/ɫ/}}||{{lat-ga|Љ љ}}<br />{{IPA|/l/}}||{{lat-ga|М м}}<br />{{IPA|/m/}}||{{lat-ga|Н н}}<br />{{IPA|/n/}}||{{lat-ga|Њ њ}}<br />{{IPA|/ɲ/}}||{{lat-ga|О о}}<br />{{IPA|/ɔ/}}||{{lat-ga|П п}}<br />{{IPA|/p/}}||{{lat-ga|Р р}}<br />{{IPA|/r/}}||{{lat-ga|С с}}<br />{{IPA|/s/}}||{{lat-ga|Т т}}<br />{{IPA|/t/}}||{{lat-ga|Ќ ќ}}<br />{{IPA|/kʲ/}}
 |-
-|align="left"|''боу́кꙑ''<br />''[[Мєждоунаро́дьна фѡниті́чьска а́ꙁъбоукы|фѡни́ма]]''||{{lat-ga|У у}}<br />{{IPA|/u/}}||{{Lat-ga|Ф ф}}<br />{{IPA|/f/}}||{{lat-ga|Х х}}<br />{{IPA|/h/}}||{{lat-ga|Ц ц}}<br />{{IPA|/ʦ/}}||{{lat-ga|Ч ч}}<br />{{IPA|/ʧ/}}||{{lat-ga|Џ џ}}<br />{{IPA|/ʤ/}}||{{lat-ga|Ш ш}}<br />{{IPA|/ʃ/}}
+|align="left"|''боу́кꙑ''<br />''[[Мєждоунаро́дьна фѡниті́чьска а́ꙁъбоукꙑ|фѡни́ма]]''||{{lat-ga|У у}}<br />{{IPA|/u/}}||{{Lat-ga|Ф ф}}<br />{{IPA|/f/}}||{{lat-ga|Х х}}<br />{{IPA|/h/}}||{{lat-ga|Ц ц}}<br />{{IPA|/ʦ/}}||{{lat-ga|Ч ч}}<br />{{IPA|/ʧ/}}||{{lat-ga|Џ џ}}<br />{{IPA|/ʤ/}}||{{lat-ga|Ш ш}}<br />{{IPA|/ʃ/}}
 |}
 
 == ꙁьри́ та́кождє ==
