*Empty MediaWiki Message*

--- a/Каꙁанъ.mw
+++ b/Каꙁанъ.mw
@@ -7,7 +7,7 @@
 | Основанъ = 1005
 | map = [[Видъ:Location Tatarstan Kazan.svg|200 px]]
 |}}
-'''Каꙁанъ''' ({{Lang-ru|Казань}},  {{lang-tt|Казан (Kazan)}}) градъ [[Рѡсїꙗ|Рѡсїѩ]] ѥстъ, [[Татарстанъ|Татарстана]] [[стольнъ градъ]] ѥстъ. Каꙁанъ основанъ лѣта 1005 ѥстъ. Дьньсь Каꙁанѣ обитаѥтъ 1110 тысѫщь людии.
+'''Каꙁанъ''' ({{Lang-ru|Казань}},  {{lang-tt|Казан (Qazan)}}) градъ [[Рѡсїꙗ|Рѡсїѩ]] ѥстъ, [[Татарстанъ|Татарстана]] [[стольнъ градъ]] ѥстъ. Каꙁанъ основанъ лѣта 1005 ѥстъ. Дьньсь Каꙁанѣ обитаѥтъ 1110 тысѫщь людии.
 == Зьри такожде ==
 {{commonscat|Kazan}}
 {{Рѡсїѩ наибол҄ьше гради}}
