--- a/Рѡсїꙗ.mw
+++ b/Рѡсїꙗ.mw
@@ -2,14 +2,14 @@
 | ꙁнамѧ= [[Дѣ́ло:Flag of Russia.svg|150px|border|100px]]
 | ꙁнакъ = [[Дѣ́ло:Coat of Arms of the Russian Federation.svg|80px]]
 | map = Russian Federation (orthographic projection).svg
-| Стольнъ градъ = [[Москъва]]
+| Стольнъ градъ = [[Москъва́]]
 | Ѩꙁꙑкъ = [[роу́сьскъ ѩꙁꙑ́къ|роу́сьскъ ѩꙁꙑ́къ]]
 | Глава = [[Дими́трїи Мєдвѣ́дєвъ]]
 | area =
 | Людии = 142,2 лєѡ́дръ
 | Почѧта = 862 г. <ref>Лєтописная дата "приꙁвания варягов", от которой традиционно отсчитꙑваєтся начало нєпрєрꙑвной российской государствєнности; В соврємєнном видє Российская Фєдєрация (РСФСР) бꙑла обраꙁована 7 ноября 1917 года. С 25 дєкабря 1991 года носит соврємєнноє наꙁваниє.</ref>
 }}
-'''Рѡсі́ꙗ''' и {{lang-ru|Россия}} · равьноправьно и́мѧ '''Рѡсі́искꙑи Съвѫ́ꙁъ''' и {{Lang-ru|Российская Федерация}} · [[Єѵрѡ́па|Єѵрѡ́пꙑ]] въсто́ка и [[Асі́ꙗ|Асі́ѩ]] сѣ́вєра наибо́л҄ьшиꙗ свѣ́та дрьжа́ва ѥ́стъ ⁙ Рѡсі́ѩ сто́льнъ гра́дъ [[Москъва]] ѥ́стъ ⁙ Наибо́л҄ьша града [[Москъва]] и [[Санкт-Пєтєрбоу́ргъ]] ѥ́стє ⁙ Дрьжа́вьнъ [[роу́сьскъ ѩꙁꙑ́къ]] ѥ́стъ ⁙ Люди́и 142,2 лєѡ́дръ обита́ѥтъ
+'''Рѡсі́ꙗ''' и {{lang-ru|Россия}} · равьноправьно и́мѧ '''Рѡсі́искꙑи Съвѫ́ꙁъ''' и {{Lang-ru|Российская Федерация}} · [[Єѵрѡ́па|Єѵрѡ́пꙑ]] въсто́ка и [[Асі́ꙗ|Асі́ѩ]] сѣ́вєра наибо́л҄ьшиꙗ свѣ́та дрьжа́ва ѥ́стъ ⁙ Рѡсі́ѩ сто́льнъ гра́дъ [[Москъва́]] ѥ́стъ ⁙ Наибо́л҄ьша града [[Москъва́]] и [[Санкт-Пєтєрбоу́ргъ]] ѥ́стє ⁙ Дрьжа́вьнъ [[роу́сьскъ ѩꙁꙑ́къ]] ѥ́стъ ⁙ Люди́и 142,2 лєѡ́дръ обита́ѥтъ
 
 == їсторі́ꙗ ==
 [[Ви́дъ:Flag of Russian SFSR.svg|thumb|left|Рѡсі́искꙑ Съвѣ́тьскꙑ Съвѫꙁьнꙑ Социалистичьскꙑ Димократі́ѩ ꙁна́мѧ]]
@@ -42,7 +42,7 @@
 * [[Марии Єлъ]]
 * [[Татарстанъ]]
 '''Града'''
-* [[Москъва]]
+* [[Москъва́]]
 * [[Санкт-Пєтєрбоу́ргъ]]
 
 |}
@@ -53,7 +53,7 @@
 Си жє сѫтъ Рѡсїѩ гради, идє бол҄ьшє 1 лєѡдръ людии обитаѥтъ.
 {|
 | valign="top" |
-* [[Москъва]]
+* [[Москъва́]]
 * [[Санкт-Петербоургъ]]
 * [[Новосибирьскъ]]
 * [[Екатерїнбоургъ]]
