*Empty MediaWiki Message*

--- a/Рѡсїꙗ.mw
+++ b/Рѡсїꙗ.mw
@@ -1,6 +1,6 @@
 {{Дрьжава|name = Рѡсі́ꙗ <br>{{lat-ga|Россия}}
-| ꙁнамѧ= [[Дѣ́ло:Flag of Russia.svg|150px|border|100px]]
-| ꙁнакъ = [[Дѣ́ло:Coat of Arms of the Russian Federation.svg|80px]]
+| знамѧ= [[Видъ:Flag of Russia.svg|150px|border|100px]]
+| знакъ = [[image:Coat of Arms of the Russian Federation.svg|80px]]
 | map = Russian Federation (orthographic projection).svg
 | Стольнъ градъ = [[Москъва́]]
 | Ѩꙁꙑкъ = [[роу́сьскъ ѩꙁꙑ́къ|роу́сьскъ ѩꙁꙑ́къ]]
