*Empty MediaWiki Message*

--- a/Рѡсїꙗ.mw
+++ b/Рѡсїꙗ.mw
@@ -3,7 +3,7 @@
 | знакъ = [[image:Coat of Arms of the Russian Federation.svg|80px]]
 | map = Russian Federation (orthographic projection).svg
 | Стольнъ градъ = [[Москъва́]]
-| Ѩꙁꙑкъ = [[роу́сьскъ ѩꙁꙑ́къ|роу́сьскъ ѩꙁꙑ́къ]]
+| Ѩзыкъ = [[роу́сьскъ ѩꙁꙑ́къ|роу́сьскъ ѩꙁꙑ́къ]]
 | Глава = [[Дими́трїи Мєдвѣ́дєвъ]]
 | area =
 | Людии = 142,2 лєѡ́дръ
