--- a/Рѡсїꙗ.mw
+++ b/Рѡсїꙗ.mw
@@ -7,7 +7,7 @@
 | Глава = [[Дими́трїи Мєдвѣ́дєвъ]]
 | area =
 | Людии = 142,2 лєѡ́дръ
-| Почѧта = 862 г. <ref>Лєтописная дата "приꙁвания варягов", от которой традиционно отсчитꙑваєтся начало нєпрєрꙑвной российской государствєнности; В соврємєнном видє Российская Фєдєрация (РСФСР) бꙑла обраꙁована 7 ноября 1917 года. С 25 дєкабря 1991 года носит соврємєнноє наꙁваниє.</ref>
+| Почѧта = 862 г. Лєтописная дата "приꙁвания варягов", от которой традиционно отсчитꙑваєтся начало нєпрєрꙑвной российской государствєнности; В соврємєнном видє Российская Фєдєрация (РСФСР) бꙑла обраꙁована 7 ноября 1917 года. С 25 дєкабря 1991 года носит соврємєнноє наꙁваниє.
 }}
 '''Рѡсі́ꙗ''' и {{lang-ru|Россия}} · равьноправьно и́мѧ '''Рѡсі́искꙑи Съвѫ́ꙁъ''' и {{Lang-ru|Российская Федерация}} · [[Єѵрѡ́па|Єѵрѡ́пꙑ]] въсто́ка и [[Асі́ꙗ|Асі́ѩ]] сѣ́вєра наибо́л҄ьшиꙗ свѣ́та дрьжа́ва ѥ́стъ ⁙ Рѡсі́ѩ сто́льнъ гра́дъ [[Москъва́]] ѥ́стъ ⁙ Наибо́л҄ьша града [[Москъва́]] и [[Санкт-Пєтєрбоу́ргъ]] ѥ́стє ⁙ Дрьжа́вьнъ [[роу́сьскъ ѩꙁꙑ́къ]] ѥ́стъ ⁙ Люди́и 142,2 лєѡ́дръ обита́ѥтъ
 
