*Empty MediaWiki Message*

--- a/Мєждоусѣтиѥ.mw
+++ b/Мєждоусѣтиѥ.mw
@@ -1,6 +1,6 @@
-'''Междѹсѣтиѥ''' ({{lang-en|Internet}}) междѹнародьна съмѣтательна сѣть основана лѣта 1969 [[АѤД|Америцѣ]] ѥстъ. Начѧлѣ сѧ ARPANET нарицааше.
+'''Мєждоусѣтиѥ''' и {{lang-en|Internet}} · мєждоународьна съмѣтатєльна сѣ́ть основанаꙗ 1969 лѣ́та [[АѤ҃Д|Амєрицѣ]] ѥ́стъ ⁙ Начѧлѣ сѧ ARPANET нарицаашє ⁙ Нꙑнѣ Мєждоусѣтиѥ 1400 лєѡ́дръ люди́и польꙃоуѫтъ
 
-== Зьри такожде ==
+== ꙁьри такождє ==
 {{commonscat|Internet}}
 [[Category:Технїка]]
 
