*Empty MediaWiki Message*

--- a/Нижьн҄ии_Новъ_Градъ.mw
+++ b/Нижьн҄ии_Новъ_Градъ.mw
@@ -1,32 +1,34 @@
-{{Градъ|Имѧ = Нижьн҄ии Новъ Градъ
+{{coord|display=title|56|19||N|44|00||E|type:city}}
+{{Градъ|Имѧ = Ни́жьн҄ии Но́въ Гра́дъ
 | знамѧ= Flag Nizhny Novgorod.gif
 | знакъ = Coat of arms Nizhny Novgorod.gif
 | Дрьжава = {{Рѡсїѩ знамѧ}} Рѡсїꙗ
-| Глава = 
-| Людии = 1284 тысѧщи
+| Глава =
+| Людии = 1284 тꙑсѧщи
 | Основанъ = 1221
-| Харта = [[Видъ:Nizhny Novgorod Districts.PNG|200px]]
+| Харта = [[Дѣ́ло:Nizhny Novgorod Districts.PNG|200px]]
 |}}
-'''Нижьн҄ии Новъ Градъ''' ({{lang-ru|Нижний Новгород}}) [[Рѡсїꙗ|Рѡсїѩ]] [[Нижѣновоградьска область|Нижѣновоградьскы области]] главьнъ градъ ѥстъ. Зданъ ѥсть рѣцѣ [[Вльга|Вльѕѣ]]. Людии обитаѥтъ 1284 тысѫщи. 
+'''Ни́жьн҄ии Но́въ Гра́дъ''' и {{lang-ru|Нижний Новгород}} · [[Рѡсі́ꙗ|Рѡсїѩ]] [[Нижѣновоградьска область|Нижѣновоградьскꙑ области]] гла́вьнъ гра́дъ ѥ́стъ ⁙ ꙁданъ ѥсть рѣцѣ [[Вльга|Вльꙃѣ]] ⁙ Люди́и обитаѥтъ 1284 тꙑсѫщи.
 
-== Їсторїꙗ ==
+== їсторі́ꙗ ==
 
-Нижьн҄ии Новъ Градъ основанъ ѥсть 1221 лѣта.  Нижьн҄ии Новъ Градъ о 1930 лѣта до 1991 лѣта именемь [[Маѯимъ Горькыи|Маѯима Горькаѥго]] званъ бѣ<ref>http://www.admgor.nnov.ru/script/oldnews.php?doc_id=11404&item=336&schtxt=</ref>. 
+Ни́жьн҄ии Но́въ Гра́дъ основанъ ѥ́стъ 1221 лѣ́та ⁙ Ни́жьн҄ии Но́въ Гра́дъ о 1930 лѣ́та до 1991 лѣ́та имєнємь [[Маѯимъ Горькꙑи|Маѯима Горькаѥго]] ꙁванъ бѣ<ref>http://www.admgor.nnov.ru/script/oldnews.php?doc_id=11404&item=336&schtxt=</ref>
 
-1985 лѣта градѣ метрополїтенъ съзижденъ бѣ.
+1985 лѣта градѣ мєтрополїтєнъ съꙁиждєнъ бѣ.
 
-== Града чѧсти ==
+== гра́да чѧ́сти ==
 # Сормовьска чѧсть
 # Москъвьска чѧсть
 # Канавиньска чѧсть
 # Сормовьска чѧсть
 # Нижѣгородьска чѧсть
-# Лениньска чѧсть
+# Лєниньска чѧсть
 # Съвѣтьска чѧсть
-# Аутозаводьска чѧсть
+# Аѵтоꙁаводьска чѧсть
 # Приокьска чѧсть
 == ꙁьри́ та́кождє ==
 <references />
+* [http://www.admgor.nnov.ru/ Ни́жьн҄ии Но́въ Гра́дъ Мєждоусѣтии]
 {{commonscat|Nizhny Novgorod}}
 {{Рѡсїѩ наибол҄ьше гради}}
 [[Category:Рѡсі́ѩ гра́ди]]
