*Empty MediaWiki Message*

--- a/Словѣньсци_ѩꙁꙑци.mw
+++ b/Словѣньсци_ѩꙁꙑци.mw
@@ -1,44 +1,44 @@
-[[Видъ:550px-Slavjanskie jeyki.png|thumb|500 px]]
-'''Словѣньсци ѩзыци''' сѫтъ родьствьни ѩзыци иже такожде їндоеурѡпеисци сѫтъ. Сими ѩзыкы [[Еурѡпа|Еурѡпѣ]] ꙗкоже и [[Асїꙗ|Асїи]] людиѥ глаголѭтъ, ихъже коупьно четыре съта леѡдръ сѫтъ.
+[[Дѣ́ло:550px-Slavjanskie jeyki.png|thumb|500 px]]
+'''Словѣньсци ѩꙁꙑци''' сѫ́тъ родьствьни ѩꙁꙑци ижє такождє їндоєѵрѡпєисци сѫ́тъ ⁙ С҄ими ѩꙁꙑкꙑ [[Єѵрѡ́па|Єѵрѡпѣ]] ꙗкожє и [[Асїꙗ|Асїи]] лю́диѥ глаголѭтъ · ихъжє коупьно чєтꙑрє съта лєѡдръ сѫ́тъ
 
-== Въсточьни ==
+== въсточьни ==
 
-Си же сѫтъ живи'' въсточьни'' словѣньсци ѩзыци: 
-* [[Роусьскъ_ѩзыкъ|роусьскъ]]
-* [[Бѣлороусьскъ_ѩзыкъ|бѣлороусьскъ]]
-* [[Оукраиньскъ_ѩзыкъ|оукраиньскъ]]
-* [[Карпатьско-роусьскъ ѩзыкъ|карпатьско-роусьскъ]].
+С҄и жє сѫтъ живи ''въсточьни'' словѣньсци ѩꙁꙑци :
+* [[Роу́сьскъ_ѩꙁꙑ́къ|роу́сьскъ]]
+* [[Бѣлороу́сьскъ_ѩꙁꙑ́къ|бѣлоро́усьскъ]]
+* [[Оукра́иньскъ_ѩꙁꙑ́къ|оукра́иньскъ]]
+* [[Карпа́тьскороу́сьскъ ѩꙁꙑ́къ|карпа́тьскороу́сьскъ]].
 
-Си же сѫтъ мрьтви '' въсточьни'' словѣньсци ѩзыци: 
-* [[Древл҄ьн҄ь роусьскъ ѩзыкъ|Древл҄ьн҄ь роусьскъ]] - о ѥго роусьскъ, оукраиньскъ и бѣлороусьскъ ѩзъци изишьли сѫтъ
-* [[Древл҄ьнѥновоградьскъ ѩзыкъ|древл҄ьнѥновоградьскъ]]
-* [[Западьно-роусьскъ ѩзыкъ|западьно-роусьскъ (древл҄ьнъ бѣлороусьскъ)]]  - о ѥго бѣлороусьскъ ѩзъкъ  ѥстъ
+С҄и жє сѫтъ мрьтви ''въсточьни'' словѣньсци ѩꙁꙑци :
+* [[Дрє́вл҄ьн҄ь роу́сьскъ ѩꙁꙑ́къ|Дрє́вл҄ьн҄ь роу́сьскъ]] · о ѥго роу́сьскъ · оукраиньскъ и бѣлороу́сьскъ ѩꙁꙑци́ иꙁишьли сѫ́тъ
+* [[Древл҄ьнѥновоградьскъ ѩзыкъ|дрєвл҄ьнѥновоградьскъ]]
+* [[ꙁападьнороу́сьскъ ѩꙁꙑ́къ|ꙁападьнороу́сьскъ (дрєвл҄ьнъ бѣлороусьскъ)]] · о ѥго бѣлороусьскъ ѩꙁъкъ ѥ́стъ
 
-== Западьни ==
+== ꙁападьни ==
 
-А с҄и же сѫтъ живи ''западьни'' словѣньсци ѩзыци:
-* [[Пол҄ьскъ_ѩзыкъ|пол҄ьскъ]]
-* [[Врьхоулоужичьскъ_ѩзыкъ|врьхоулоужичьскъ]]
-* [[Нижьнѥлоужичьскъ_ѩзыкъ|нижьнѥлоужичьскъ]]
-* [[Кашоубьскъ_ѩзыкъ|кашоубьскъ]]
-* [[Чешьскъ_ѩзыкъ|чешьскъ]]
-* [[карпатьско-словѣньскъ_ѩзыкъ|карпатьско-словѣньскъ]]. 
+А с҄и жє сѫтъ живи ''ꙁападьни'' словѣньсци ѩꙁꙑци :
+* [[По́л҄ьскъ_ѩꙁꙑ́къ|по́л҄ьскъ]]
+* [[Врьхоулоужичьскъ_ѩꙁꙑ́къ|врьхоулоужичьскъ]]
+* [[Нижьнѥлоужичьскъ_ѩꙁꙑ́къ|нижьнѥлоужичьскъ]]
+* [[Кашоу́бьскъ_ѩꙁꙑ́къ|кашоу́бьскъ]]
+* [[Чє́шьскъ_ѩꙁꙑ́къ|чє́шьскъ]]
+* [[карпа́тьскословѣ́ньскъ_ѩꙁꙑ́къ|карпа́тьскословѣ́ньскъ]].
 
-== Южьни ==
+== южьни ==
 
-''Южьни'' ѩзыци живы сѫтъ с҄и:
-* [[Блъгарьскъ_ѩзыкъ|блъгарьскъ]]
-* [[Македоньскъ_ѩзыкъ|македоньскъ]]
-* [[Срьбьскъ_ѩзыкъ|срьбьскъ]]
-* [[Хръватьскъ_ѩзыкъ|хръватьскъ]]
-* [[Босньскъ_ѩзыкъ|босньскъ]]
-* [[Їллӱрїиско-словѣньскъ_ѩзыкъ|їллӱрїиско-словеньскъ]].
+''Южьни'' ѩꙁꙑци́ живꙑ сѫ́тъ с҄и :
+* [[Блъга́рьскъ_ѩꙁꙑ́къ|блъга́рьскъ]]
+* [[Макєдо́ньскъ_ѩꙁꙑ́къ|макєдо́ньскъ]]
+* [[Срь́бьскъ_ѩꙁꙑ́къ|срь́бьскъ]]
+* [[Хръва́тьскъ_ѩꙁꙑ́къ|хръва́тьскъ]]
+* [[Бо́сньскъ_ѩꙁꙑ́къ|бо́сньскъ]]
+* [[Їллѷрі́искословѣ́ньскъ_ѩꙁꙑ́къ|їллѷрі́искословѣ́ньскъ]]
 
-А с҄и же сѫтъ мрьтви южьни словѣньсци ѩзыци:
-* [[словѣньскъ ѩзыкъ|словѣньскъ]] - от ѥго црькъвьнословѣньскъ ѩзъкъ ѥстъ 
-* [[Црькъвьнословѣньскъ ѩзыкъ|црькъвьнословѣньскъ]]
+А с҄и жє сѫ́тъ мрьтви южьни словѣ́ньсци ѩꙁꙑци́ :
+* [[словѣ́ньскъ ѩꙁꙑ́къ|словѣ́ньскъ]] · от ѥго црькъвьнословѣ́ньскъ ѩꙁꙑ́къ ѥ́стъ
+* [[Црькъвьнословѣньскъ ѩзыкъ|црькъвьнословѣ́ньскъ]]
 
-== Зьри такожде ==
+== ꙁьри́ та́кождє ==
 {{commonscat|Slavic languages}}
 [[Category:Словѣ́ньсци ѩꙁꙑци́|*]]
 
