*Empty MediaWiki Message*

--- a/Прѣꙁъсибирьскъ_колѣинъ_пѫть.mw
+++ b/Прѣꙁъсибирьскъ_колѣинъ_пѫть.mw
@@ -1,5 +1,7 @@
-[[Видъ:Map Trans-Siberian railway.png|thumb|200 px]]
-'''Прѣзъсибирьскъ колѣинъ пѫть''' ([[Рѹсьскъ ѩзыкъ|рѹсьскы]] ''Транссибирская магистраль'', ''Транссиб'') [[Рѡсї|Рѡсїи]] ѥстъ. Наидьлъжаии колѣинъ пѫть свѣта ѥстъ. Строѥнъ бѣаше лѣтъ 1891—1916, ѥго почѧтъкъ [[Москъва]], ѥго коньць [[Владивъстокъ]] сѫтъ.
+[[Дѣ́ло:Map Trans-Siberian railway.png|thumb|200 px]]
+'''Прѣꙁъсибирьскъ колѣинъ пѫть''' и {{lang-ru|Транссибирская магистраль, Транссиб}} · [[Рѡсі́ꙗ|Рѡсїи]] ѥ́стъ ⁙ Наидьлъжаии колѣинъ пѫть свѣта ѥ́стъ ⁙ Ѥгожє длъгота 9288,2 к҃м ѥ́стъ ⁙ Строѥнъ бѣашє лѣтъ 1891—1916 · ѥго почѧтъкъ [[Москъва́]] · ѥго коньць [[Владивъсто́къ]] сѫ́тъ
+
+Прѣꙁъсибирьскъ колѣинъ пѫть прѣꙁъ Оуфѫ · Самарѫ · [[Єкатєрїнбоу́ргъ]] · [[Новосиби́рьскъ]] · [[О́мьскъ]] и инꙑ гради лєжитъ 
 
 [[Category:Прѣзъсибирьскъ колѣинъ пѫть|*]]
 
