*Empty MediaWiki Message*

--- a/Оуфа.mw
+++ b/Оуфа.mw
@@ -1,19 +1,44 @@
-{{Градъ|Имѧ = Оуфа
-| знамѧ= 
-| знакъ = Ufa_gerb.gif
+{{coord|display=title|54|44||N|55|58||E|type:city}}
+{{Градъ|Имѧ = Оу́фа
+|Тѷпъ=гра́дъ
+| знамѧ= Flag of Ufa (Bashkortostan).png
+| знакъ = Ufa-arms.jpg
 | Дрьжава = {{Рѡсїѩ знамѧ}} Рѡсїꙗ
-| Глава = 
-| Людии = 1029 тысѫщь
+| Глава =
+| Людии = 1029 тꙑсѫщь
 | Основанъ = 1586
-| Харта = 
+| Харта =[[Дѣ́ло:Ufaineurope.png|200px]]
 |}}
-'''Оу́фа''' ({{lang-ba|Өфө}}, {{lang-ru|Уфа}}) [[Рѡсїꙗ|Рѡсїѩ]], [[Башкортостанъ|Башкортостаноу]] димократїѩ главьнъ градъ ѥстъ. Людии обитаѥтъ 1029 тысѫщь. Основанъ 1574 лѣта, нареченъ градъ съ 1586 лѣта ѥстъ. Зьдана сълиꙗнии [[Бѣлаꙗ (рѣка)|Бѣлыѩ]], [[Диома (рѣка)|Диомы]], и [[Оуфа (рѣка)|Оуфы]] рѣкъ ѥстъ. Зьдана [[Прѣзъсибирьскъ колѣинъ пѫть|Прѣзъсибирьсцѣ колѣинѣ пѫти]] ѥстъ.
-== Зьри такожде ==
+'''Оу́фа''' и {{lang-ba|Өфө}} · {{lang-ru|Уфа}} · [[Рѡсїꙗ|Рѡсїѩ]] · [[Башкортостанъ|Башкортостаноу]] димократі́ѩ гла́вьнъ гра́дъ ѥ́стъ ⁙ Люди́и обитаѥтъ 1029 тꙑсѫщь. Основанъ 1574 лѣ́та · нарєчєнъ градъ съ 1586 лѣта ѥ́стъ ⁙ Градъ ꙁьданъ сълиꙗнии [[Бѣ́лаꙗ · рѣ́ка|Бѣлꙑѩ]] · [[Диома · рѣ́ка|Диомꙑ]] и [[Оу́фа · рѣка|Оуфꙑ]] рѣкъ ѥ́стъ ⁙ Прѣꙁъ Оуфѫ [[Прѣꙁъсибирьскъ колѣинъ пѫть]] лєжитъ
+
+== Оуфꙑ чѧсти ==
+{| class="standard"
+|-style="background:#ddd;"
+! ч҃сл
+! Имѧ
+! Люди́и обита́єтъ
+! ОК҃АТО
+|-
+| 01 || Ди҄омьска чѧ́сть || align="right" | 53 254 || align="center" | 80 401 365 
+|-
+| 02 || Калининьска чѧ́сть || align="right" | 196 798 || align="center" | 80 401 370 
+|-
+| 03 || Кировьска чѧ́сть || align="right" | 128 214 || align="center" | 80 401 375 
+|-
+| 04 || Лєниньска чѧ́сть || align="right" | 74 106 || align="center" | 80 401 380 
+|-
+| 05 || Октѡврі́иська чѧ́сть || align="right" | 229 944 || align="center" | 80 401 384 
+|-
+| 06 || Орджоникиꙃєвьска чѧ́сть || align="right" | 181 349 || align="center" | 80 401 385 
+|-
+| 07 || Съвѣ́тьска чѧ́сть || align="right" | 166 105 || align="center" | 80 401 390 
+|-
+|}
+== ꙁьри такождє ==
 {{commonscat|Ufa}}
 {{Рѡсїѩ наибол҄ьше гради}}
 
-[[Катигорї:Гради]]
-[[Катигорї:Рѡсїꙗ]]
+[[Category:Рѡсі́ѩ гра́ди]]
 [[Category:Прѣзъсибирьскъ колѣинъ пѫть]]
 
 [[af:Oefa]]
