--- a/Башкортьскъ_ѩꙁꙑкъ.mw
+++ b/Башкортьскъ_ѩꙁꙑкъ.mw
@@ -1,46 +1,107 @@
 '''Башкортьскъ ѩꙁꙑкъ''' [[Башъкортостанъ|Башкортостанѹ]] димократїѩ главьнъ ѩꙁꙑкъ ѥстъ. Симъ ѩꙁꙑкомъ 1,4 лѡдръ людии глаголѣтъ.
 
-==Башкортьска [[азъбѹкы]]==
+==Башкортьска аꙁъбоукꙑ==
 
-<div style="margin: 4px;padding: 4px;width:40%;border:solid #999 1px;background:#F8F8F8;margin:0.5em auto; text-align: center;">
-Аа
-Бб
-Вв
-Гг
-Ғғ
-Дд
-Ҙҙ
-Ее
-Ии
-Йй
-Кк
-Ҟҟ
-Лл
-Мм
-Ңң
-Оо
-Өө
-Пп
-Рр
-Сс
-Ҫҫ
-Тт
-Уу
-Үұ
-Фф
-Хх
-Һһ
-Цц
-Чч
-Шш
-Щщ
-Ъъ
-Ыы
-Ьь
-Ээ
-Юю
-Яя
-</div>
+{|class="standard"
+|+
+|width=23%|{{lat-ga|Аа (а)}}
+|width=10%|[a]
+|width=23%|{{lat-ga|Бб (бэ)}}
+|width=10%|[b]
+|width=24%|{{lat-ga|Вв (вэ)}}
+|width=10%|[v]
+|-
+|{{lat-ga|Гг (гэ)}}
+|[g]
+|{{lat-ga|Ғғ (ғы)}}
+|[{{МФА|ɣ}}]
+|{{lat-ga|Дд (дэ)}}
+|[d]
+|-
+|{{lat-ga|Ҙҙ (ҙэ)}}
+|[ð]
+|{{lat-ga|Ее (йе)}}
+|[e], [je]
+|{{lat-ga|Ёё (йо)}}
+|[jo]
+|-
+|{{lat-ga|Жж (жэ)}}
+|[{{МФА|ʒ}}]
+|{{lat-ga|Зз (зэ)}}
+|[z]
+|{{lat-ga|Ии (и)}}
+|[i]
+|-
+|{{lat-ga|Йй (ҡыҫҡа и)}}
+|[j]
+|{{lat-ga|Кк (ка)}}
+|[k]
+|{{lat-ga|Ҡҡ (ҡы)}}
+|[q]
+|-
+|{{lat-ga|Лл (эль)}}
+|[l]
+|{{lat-ga|Мм (эм)}}
+|[m]
+|{{lat-ga|Нн (эн)}}
+|[n]
+|-
+|{{lat-ga|Ңң (эң)}}
+|[ŋ]
+|{{lat-ga|Оо (о)}}
+|[o]
+|{{lat-ga|Өө (ө)}}
+|[ø]
+|-
+|{{lat-ga|Пп (пэ)}}
+|[p]
+|{{lat-ga|Рр (эр)}}
+|[r]
+|{{lat-ga|Сс (эс)}}
+|[s]
+|-
+|{{lat-ga|Ҫҫ (ҫэ)}}
+|[θ]
+|{{lat-ga|Тт (тэ)}}
+|[t]
+|{{lat-ga|Уу (у)}}
+|[u]
+|-
+|{{lat-ga|Үү (ү)}}
+|[y]
+|{{lat-ga|Фф (эф)}}
+|[f]
+|{{lat-ga|Хх (ха)}}
+|[x]
+|-
+|{{lat-ga|Һһ (һа)}}
+|[h]
+|{{lat-ga|Цц (цэ)}}
+|[{{МФА|ʦ}}]
+|{{lat-ga|Чч (чэ)}}
+|[{{МФА|ʧ}}]
+|-
+|{{lat-ga|Шш (ша)}}
+|[{{МФА|ʃ}}]
+|{{lat-ga|Щщ (ща)}}
+|[{{МФА|ɕ}}]
+|{{lat-ga|Ъъ (ҡатылыҡ билдәһе)}}
+|[ʔ]
+|-
+|{{lat-ga|Ыы (ы)}}
+|[{{МФА|ɯ}}]
+|{{lat-ga|Ьь (йомшаҡлыҡ билдәһе)}}
+|[{{МФА|ʲ}}]
+|{{lat-ga|Ээ (э)}}
+|[e]
+|-
+|{{lat-ga|Әә (ә)}}
+|[æ]
+|{{lat-ga|Юю (йу)}}
+|[ju]
+|{{lat-ga|Яя (йа)}}
+|[ja]
+|}
 
 == ꙁьри такождє ==
 
