*Empty MediaWiki Message*

--- a/Оукраина.mw
+++ b/Оукраина.mw
@@ -1,10 +1,10 @@
 {{Дрьжава|name = Оукра́ина<br>{{lat-ga|Україна}}
-| ꙁнамѧ= [[Дѣ́ло:Flag of Ukraine.svg|150px]]
-| ꙁнакъ = [[Дѣ́ло:Coat of arms of Ukraine.svg|100px]]
+| знамѧ= [[Дѣ́ло:Flag of Ukraine.svg|150px]]
+| знакъ = [[Дѣ́ло:Coat of arms of Ukraine.svg|100px]]
 | map = LocationUkraine.svg
-| Рєчєниѥ= <!--Воля, злагода, добро-->
+| Речениѥ= <!--Воля, злагода, добро-->
 | Стольнъ градъ = [[Кꙑ́ѥвъ]]
-| Ѩꙁꙑкъ = [[Оукра́иньскъ ѩꙁꙑ́къ|оукра́иньскъ]]
+| Ѩзыкъ = [[Оукра́иньскъ ѩꙁꙑ́къ|оукра́иньскъ]]
 | Глава = [[Ви́кторъ Ю́щєнко]]
 | Пространиѥ = 603 700 к҃м²
 | Людии = 46,4 лєѡ́дръ
