*Empty MediaWiki Message*

--- a/Кїкєрѡнъ.mw
+++ b/Кїкєрѡнъ.mw
@@ -1,11 +1,11 @@
-[[Видъ:Marcus_Tullius_Cicero.jpg|thumb|200px|Кїкерѡнъ]]
-'''Маркъ Тѹллїи Кїкерѡ́нъ''' ([[латиньскъ ѩзыкъ|латиньскы]] ''Mārcus Tullius Cicerō''; [[їанѹарї 3]] числа 106 лѣта до РХ — [[декемврї 7]] числа 43 лѣта до РХ). Дрьвл҄ьн҄иѥмь [[Римъ (дрьжава)|Римѣ]] Кїкерѡнъ народоводьць и фїлософъ бѣаше, извѣстѣии римьскыи вѣтии ѥстъ.
+[[Дѣ́ло:Marcus_Tullius_Cicero.jpg|thumb|200px|Кїкєрѡнъ]]
+'''Маркъ Тоуллїи Кїкєрѡ́нъ''' и {{lang-la|Mārcus Tullius Cicerō}} · [[їаноуарїꙗ 3]] числа 106 лѣта до Р҃Х — [[дєкємврїꙗ 7]] числа 43 лѣта до Р҃Х ⁙ Дрьвл҄ьн҄иѥмь [[Ри́мъ · дрьжа́ва|Римѣ]] Кїкєрѡ́нъ народоводьць и фїлософъ бѣашє · иꙁвѣстѣии римьскꙑи вѣтии ѥ́стъ
 ==Житиѥ==
-===Прьва лѣта===
-Кїкерѡнъ рожденъ бѣаше отьчьствѣ, ѥже ис [[кон҄ьно воинство (римьскъ образъ)|кон҄ьнаѥго воиньства]] бѣаше, и сѥго дѣл҄ьма доброѥ ѹчениѥ обрѣлъ бѣаше, вънѥмьже велии ѹспѣхъ ѥмѹ бѣаше.
+===Прьваꙗ лѣта===
+Кїкєрѡнъ рождєнъ бѣашє отьчьствѣ · ѥжє ис [[кон҄ьно воинство (римьскъ образъ)|кон҄ьнаѥго воиньства]] бѣашє · и сѥго дѣл҄ьма доброѥ оучєниѥ обрѣлъ бѣашє · вънѥмьжє вєлии оуспѣхъ ѥмоу бѣашє.
 
 {{stub}}
-[[Category:Людиѥ]]
+[[Category:Лю́диѥ]]
 [[Category:Фїлософи]]
 
 {{Link FA|fi}}
