*Empty MediaWiki Message*

--- a/Съвѣтьскъ_Социалистичьскъ_Димократїи_Съвѫꙁъ.mw
+++ b/Съвѣтьскъ_Социалистичьскъ_Димократїи_Съвѫꙁъ.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Съвѣ́тьскъ Социалисти́чьскъ Димократі́и Съвѫ́ꙁъ <br>{{lat-ga|Союз Советских Социалистических Республик}}
 | знамѧ= [[Видъ:Flag of the Soviet Union.svg|150px|border|100px]]
 | знакъ = [[image:Coat of arms of the Soviet Union.svg|80px]]
-| map = LocationUSSR.png
+| map = USSRmap.svg
 | Речениѥ = {{lat-ga|Пролетарии всех стран, соединяйтесь!}}
 | Стольнъ градъ = [[Москъва́]]
 | Ѩзыкъ = [[роу́сьскъ ѩꙁꙑ́къ]]
