--- a/Владимиръ_Поутинъ.mw
+++ b/Владимиръ_Поутинъ.mw
@@ -1,12 +1,12 @@
 [[Видъ:Vladimir Putin 17 July 2000-1.jpg|thumb|Владимиръ Поутинъ]]
 '''Влади́миръ Влади́мировичь Поу́тинъ''' и {{lang-ru|Владимир Владимирович Путин}} · въторꙑи гла́ва и прѣдъсѣда́тєл̑ь [[Рѡсі́ꙗ|Рѡсі́ѩ]] бѣ ⁙ Нꙑ́нѣ ѥѩ прави́тєл̑ьства прѣдъсѣда́тєл̑ь ѥ́стъ
 
-== біографі́ꙗ ==
+== бїографі́ꙗ ==
 
-Рожденъ ѥстъ [[Лѣнинаградъ|Лѣнинаградѣ]] (дьньсь [[Санкт-Пєтєрбоу́ргъ]]) лѣтѣ [[1952]]. Трѫдише сѧ министрьствѣ дрьжавьнаѥго опасени Нѣмьцѣхъ, по томь Петербѹржьсцѣ ѹправѣ града помощьникъ градьскаѥго главы. Лѣтѣ [[1998]] възглави съвѫзьнѫѭ слѹжьбѫ опасени Рѡсїѩ. Лѣтѣ [[1999]] ави сѧ прѣдъсѣдател̑ь правител̑ьства, того же лѣта [[декемвриıa 31]] отрече сѧ прьвыи прѣдъсѣдател̑ь [[Борисъ Ѥльцинъ]] о власти. Весноѭ [[2000]] Владимиръ Пѹтинъ избьранъ бы прѣмыимь гласованиѥмь прѣдъсѣдател̑ь Рѡсїѩ на четыре лѣта, лѣтѣ [[2004]] прѣизбьранъ ѥстъ на вътороѥ врѣмѧ.
+Рождєнъ ѥ́стъ Лєниноградѣ (дьньсь [[Санкт-Пєтєрбоу́ргъ]]) лѣта [[1952]] ⁙ Трѫдишє сѧ министрьствѣ дрьжавьнаѥго опасєниꙗ Нѣмьцѣхъ · по томь Пєтєрбоуржьсцѣ оуправѣ града помощьникъ градьскаѥго главꙑ · Лѣта [[1998]] въꙁглави съвѫꙁьнѫѭ слоужьбѫ опасєниꙗ Рѡсі́ѩ · Лѣтѣ [[1999]] ави сѧ прѣдъсѣдатєл̑ь правитєл̑ьства · того жє лѣта [[дєкємврїꙗ 31]] отрєчє сѧ прьвꙑи прѣдъсѣдатєл̑ь [[Борисъ Ѥльцинъ]] о власти · Вєсноѭ [[2000]] Владимиръ Поутинъ иꙁбьранъ бѣ прѣмꙑимь гласованиѥмь прѣдъсѣдатєл̑ь Рѡсі́ѩ на чєтꙑрє лѣта · лѣтѣ [[2004]] прѣиꙁбьранъ ѥстъ на вътороѥ врѣмѧ
 
-[[Category:Людиѥ|Пѹтинъ]]
-[[Category:Рѡсї]]
+[[Category:Лю́диѥ|Поутинъ]]
+[[Category:Рѡсі́ꙗ]]
 
 [[af:Wladimir Poetin]]
 [[ar:فلاديمير بوتين]]
