*Empty MediaWiki Message*

--- a/Дамаскъ.mw
+++ b/Дамаскъ.mw
@@ -1,4 +1,4 @@
-'''Дамаскъ''' ([[Ѩзыкъ аравьскъ|аравьскы]]:دمشق ) стольнъ и наиболии градъ [[Сѷрї|Сѷрїѩ]] ѥстъ.
+'''Дамаскъ''' ([[Ѩзыкъ аравьскъ|аравьскъ]]:دمشق ) стольнъ и наиболии градъ [[Сѷрї|Сѷрїѩ]] ѥстъ.
 
 [[Category:Гради]]
 [[Category:Сѷрї]]
