*Empty MediaWiki Message*

--- a/Асїꙗ.mw
+++ b/Асїꙗ.mw
@@ -1,7 +1,7 @@
-[[Видъ:LocationAsia.png|right|thumb|200px|Асї свѣтьнѣ хартѣ]]
-'''Асїꙗ''' бол&#x0484;ьша свѣта чѧсть ѥстъ. Людии 3981 леѡдръ обитаѥтъ. Бол҄ьши дрьжава [[Рѡсїꙗ]] ѥстъ. 
+[[Дѣ́ло:LocationAsia.png|right|thumb|200px|Асїꙗ свѣтьнѣ хартѣ]]
+'''Асїꙗ''' бол҄ьша свѣта чѧсть ѥстъ. Людии 3981 лєѡдръ обитаѥтъ. Бол҄ьши дрьжава [[Рѡсїꙗ]] ѥстъ.
 
-== Зьри такожде ==
+== ꙁьри такождє ==
 {{commonscat|Asia}}
 {{Свѣта чѧсти}}
 [[Category:Свѣ́та чѧ́сти]]
