*Empty MediaWiki Message*

--- a/Аѵстралїꙗ_и_Ѡкєанїꙗ.mw
+++ b/Аѵстралїꙗ_и_Ѡкєанїꙗ.mw
@@ -1,5 +1,5 @@
-[[Видъ:LocationOceania.png|thumb|Аѵстралї и Ѡкеанї свѣтьнѣ хартѣ]]
-'''Аѵстралї и Ѡкеанї''' свѣта чѧсть ѥстъ.
+[[Дѣ́ло:LocationOceania.png|thumb|Аѵстралїꙗ и Ѡкєанїꙗ свѣтьнѣ хартѣ]]
+'''Аѵстралїꙗ и Ѡкєанїꙗ''' свѣта чѧсть ѥстъ.
 
 {{Свѣта чѧсти}}
 [[Category:Свѣ́та чѧ́сти]]
