*Empty MediaWiki Message*

--- a/Москъва.mw
+++ b/Москъва.mw
@@ -1,8 +1,8 @@
 {{coord|display=title|55|45||N|37|37||E|type:city}}
 {{Селѥниѥ|Имѧ = Москъва́
 | Тѷпъ = Гра́дъ
-| знамѧ= Flag of Moscow (Russia).png
-| знакъ = Coat of Arms of Moscow.png
+| знамѧ= Flag of Moscow.svg
+| знакъ = Coat of Arms of Moscow.svg
 | Дрьжава = {{Рѡсїѩ знамѧ}} [[Рѡсі́ꙗ]]
 | Глава = Юрии Лоужьковъ
 | Людии = 10.472.629 
