*Empty MediaWiki Message*

--- a/Асєнѥвъ_Градъ.mw
+++ b/Асєнѥвъ_Градъ.mw
@@ -1,13 +1,14 @@
-{{Градъ|Имѧ = Асенѥвъ Градъ
+{{coord|display=title|42|01||N|24|52||E|region:BG_type:city}}
+{{Градъ|Имѧ = Асє́нѥвъ Гра́дъ
 | знамѧ= 
 | знакъ = Asenovgrad-coat-of-arms.svg
-| Дрьжава = {{Блъгарїѩ знамѧ}} [[Блъгарі́ꙗ]]
-| Глава = 
-| Людии = 56 тысѫщь
-| Основанъ = ~3 тысѫщи лѣтъ до ХР
-| Харта = 
+| Дрьжава = {{Блъгарїѩ знамѧ}} [[Блъгарі́ꙗ]]
+| Глава =
+| Людии = 56 тꙑсѫщь
+| Основанъ = ~300 лѣта до Х҃Р
+| Харта =
 }}
-'''Асенѥвъ Градъ''' ({{lang-bg|Асеновград}}) [[Блъгарі́ꙗ|Блъгарїи]] ѥ́стъ. Людии обитаѥтъ 56 тысѫщь. Асенѥвъ Градъ [[Плъпъдевьска область|Плъпъдевьскы области]] [[Главьнъ гра́дъ|главьнъ]] ѥ́стъ. 
+'''Асє́нѥвъ Гра́дъ''' и {{lang-bg|Асеновград}} · [[Блъгарі́ꙗ|Блъгарі́ѩ]] [[Фїлїппопольска область|Фїлїппопольскꙑ области]] Асєновьградьскꙑ обьщинꙑ гла́вьнъ гра́дъ ѥ́стъ ⁙ Люди́и обитаѥтъ 56 тꙑсѫщь ⁙ Града имѧ до 1934 лѣта ⁖ Станимака ⁖ бѣ ꙗко ѳракі́иська имєни Στενήμαχος блъга́рьскъ обраꙁъ ѥ́стъ
 
 {{Блъгарі́ѩ гра́ди}}
 
