*Empty MediaWiki Message*

--- a/Рила.mw
+++ b/Рила.mw
@@ -1,6 +1,11 @@
-Рила гора Блъгарї есть (2925 м - [[Мусала]]).
+[[Дѣ́ло:Rots met kruis bij Rila klooster.jpeg|thumb]]
+'''Рила''' [[Блъгарі́ꙗ|Блъгарі́ѩ]] горꙑ ѥ́сть ⁙ Наивꙑсьша гора [[Мусала]] (2925 [[мє́тро|м҃]] · {{coord|42|10|47|N|23|35|12|E|}}) ѥ́стъ ⁙ Рилꙑ пространиѥ 2400 к҃м² ѥ́стъ
 
-[[Катигорї:Блъгарї]]
+== ꙁьри́ та́кождє ==
+
+{{commonscat|Rila}}
+* [http://www.rilanationalpark.org/ Рила Мєждоусѣтии]
+[[Category:Блъгарі́ꙗ]]
 
 {{Link FA|bg}}
 
