*Empty MediaWiki Message*

--- a/Блъгарїꙗ.mw
+++ b/Блъгарїꙗ.mw
@@ -1,13 +1,13 @@
-{{Дрьжава|name = Блъгарїꙗ<br>{{lat-ga|България}} 
-| знамѧ= [[Видъ:Flag of Bulgaria.svg|border|150px]]
-| знакъ = [[image:Coat_of_arms_of_Bulgaria.svg|80px]]
+{{Дрьжава|name = Блъгарїꙗ<br>{{lat-ga|България}}
+| ꙁнамѧ= [[Дѣ́ло:Flag of Bulgaria.svg|border|150px]]
+| ꙁнакъ = [[Дѣ́ло:Coat_of_arms_of_Bulgaria.svg|80px]]
 | map = EU location BUL.png
-| Речениѥ = {{lat-ga|Съединението прави силата}}
+| Рєчєниѥ = {{lat-ga|Съединението прави силата}}
 | Стольнъ градъ = [[Софі́ꙗ]]
-| Ѩзыкъ = [[Блъга́рьскъ ѩꙁꙑ́къ|блъга́рьскъ]]
+| Ѩꙁꙑкъ = [[Блъга́рьскъ ѩꙁꙑ́къ|блъга́рьскъ]]
 | Глава = Гєѡ́ргїи Пръвановъ
 | Пространиѥ = 110 910 к҃м²
-| Людии = 7,7 лєѡ́дръ 
+| Людии = 7,7 лєѡ́дръ
 | Почѧта = 632 (1908 пакꙑ самостоꙗтѣльнаꙗ ѥ́стъ)
 }}
 
@@ -15,7 +15,7 @@
 
 == їсторі́ꙗ ==
 
-Самостоꙗтѣльнаꙗ дрьжа́ва от [[Османьска аѵтократорі́ꙗ|Османьскꙑ аѵтократорі́ѩ]] съ 1908 лѣ́та ѥ́стъ ⁙ До 1946 лѣ́та Блъгарі́ꙗ цѥсарьствомь бѣ · нꙑнѣ она димократі́ꙗ ѥ́стъ 
+Самостоꙗтѣльнаꙗ дрьжа́ва от [[Османьска аѵтократорі́ꙗ|Османьскꙑ аѵтократорі́ѩ]] съ 1908 лѣ́та ѥ́стъ ⁙ До 1946 лѣ́та Блъгарі́ꙗ цѥсарьствомь бѣ · нꙑнѣ она димократі́ꙗ ѥ́стъ
 
 Їаноуарїꙗ 1 числа2007 лѣ́та Блъгарі́ꙗ въшла въ съста́въ [[Єѵрѡ́пьскꙑи свѫꙁъ|Єѵрѡ́пьска съвѫꙁа]] бѣ
 
@@ -56,7 +56,7 @@
 
 == ꙁьри́ та́кождє ==
 {{commonscat|Bulgaria}}
-*[[Блъга́рє]]
+* [[Блъга́рє]]
 {{Словѣньскы дрьжавы}}
 
 [[Category:Блъгарі́ꙗ|*]]
