*Empty MediaWiki Message*

--- a/Блъгарїꙗ.mw
+++ b/Блъгарїꙗ.mw
@@ -4,7 +4,7 @@
 | map = EU location BUL.png
 | Рєчєниѥ = {{lat-ga|Съединението прави силата}}
 | Стольнъ градъ = [[Софі́ꙗ]]
-| Ѩꙁꙑкъ = [[Блъга́рьскъ ѩꙁꙑ́къ|блъга́рьскъ]]
+| Ѩꙁꙑ́къ = [[Блъга́рьскъ ѩꙁꙑ́къ|блъга́рьскъ]]
 | Глава = Гєѡ́ргїи Пръвановъ
 | Пространиѥ = 110 910 к҃м²
 | Людии = 7,7 лєѡ́дръ
