*Empty MediaWiki Message*

--- a/Рѡсїꙗ.mw
+++ b/Рѡсїꙗ.mw
@@ -1,9 +1,9 @@
 {{Дрьжава|name = Рѡсі́искꙑи Съвѫ́ꙁъ <br>{{lat-ga|Российская Федерация}}
-| знамѧ= [[Видъ:Flag of Russia.svg|150px|border|100px]]
-| знакъ = [[image:Coat of Arms of the Russian Federation.svg|80px]]
+| ꙁнамѧ= [[Дѣ́ло:Flag of Russia.svg|150px|border|100px]]
+| ꙁнакъ = [[Дѣ́ло:Coat of Arms of the Russian Federation.svg|80px]]
 | map = Russian Federation (orthographic projection).svg
 | Стольнъ градъ = [[Москъва́]]
-| Ѩзыкъ = [[роу́сьскъ ѩꙁꙑ́къ|роу́сьскъ ѩꙁꙑ́къ]]
+| Ѩꙁꙑкъ = [[роу́сьскъ ѩꙁꙑ́къ|роу́сьскъ ѩꙁꙑ́къ]]
 | Глава = [[Дими́трїи Мєдвѣ́дєвъ]]
 | Пространиѥ = 17 075 400 к҃м²
 | Людии = 142,2 лєѡ́дръ
