*Empty MediaWiki Message*

--- a/Їллѷрїиска_Словѣнїꙗ.mw
+++ b/Їллѷрїиска_Словѣнїꙗ.mw
@@ -18,7 +18,7 @@
 
 == їсторі́ꙗ ==
 
-1918 лѣ́та по [[Прь́ваꙗ Свѣ́тьнаꙗ Воина|Прь́вꙑѩ Свѣ́тьнꙑѩ Воинꙑ]] въшьла въ съставъ Срь́бъ · Хръва́тъ и Словѣ́ньць Кралѥ́вьства · послѣди имєноуѥмаꙗ [[Югосла́виꙗ]] бѣ · по [[Вътораꙗ Свѣтьнаꙗ Воина|Въторꙑѩ Свѣтьнꙑѩ Воины]] ꙗжє Социалистичьска Съвѫꙁьна Димократі́ꙗ Югосла́виꙗ · ССД҃Ю · бѣ ⁙ Послѣди распада ССД҃Ю Їллѷрі́иска Словѣні́ꙗ стала самостоꙗтєл҄ьна дрьжа́ва ѥ́стъ 
+1918 лѣ́та по [[Прь́ваꙗ Свѣ́тьнаꙗ Воина|Прь́вꙑѩ Свѣ́тьнꙑѩ Воинꙑ]] въшьла въ съставъ Срь́бъ · Хръва́тъ и Словѣ́ньць Кралѥ́вьства · послѣди имєноуѥмаꙗ [[Югосла́виꙗ]] бѣ · по [[Вътораꙗ Свѣтьнаꙗ Воина|Въторꙑѩ Свѣтьнꙑѩ Воинꙑ]] ꙗжє Социалистичьска Съвѫꙁьна Димократі́ꙗ Югосла́виꙗ · ССД҃Ю · бѣ ⁙ Послѣди распада ССД҃Ю Їллѷрі́иска Словѣні́ꙗ стала самостоꙗтєл҄ьна дрьжа́ва ѥ́стъ
 
 Нꙑнѣ Їллѷрі́иска Словѣні́ꙗ въ съставъ Єѵрѡ́пьска съвѫꙁа въходитъ
 
