*Empty MediaWiki Message*

--- a/Бѣла_Роусь.mw
+++ b/Бѣла_Роусь.mw
@@ -1,9 +1,9 @@
 {{Дрьжава|name = Бѣла́ Роу́сь Димократі́ꙗ<br>{{lat-ga|Рэспубліка Беларусь<br>Республика Беларусь}}
-| знамѧ= [[Видъ:Flag of Belarus.svg|150px]]
-| знакъ = [[image:Coat of arms of Belarus.svg|80px]]
-| map = LocationBelarus.svg 
+| ꙁнамѧ= [[Дѣ́ло:Flag of Belarus.svg|150px]]
+| ꙁнакъ = [[Дѣ́ло:Coat of arms of Belarus.svg|80px]]
+| map = LocationBelarus.svg
 | Стольнъ градъ = [[Мѣньскъ]]
-| Ѩзыкъ = [[Бѣлороу́сьскъ ѩꙁꙑ́къ|бѣлороу́сьскъ]] и [[Роу́сьскъ ѩꙁꙑ́къ|роу́сьскъ]] 
+| Ѩꙁꙑкъ = [[Бѣлороу́сьскъ ѩꙁꙑ́къ|бѣлороу́сьскъ]] и [[Роу́сьскъ ѩꙁꙑ́къ|роу́сьскъ]]
 | Глава = [[Алєѯа́ндръ Лоукашє́нко]]
 | Пространиѥ =207 600 к҃м²
 | Людии = 9 лєѡ́дръ
