*Empty MediaWiki Message*

--- a/Блъгарїꙗ.mw
+++ b/Блъгарїꙗ.mw
@@ -1,10 +1,10 @@
 {{Дрьжава|name = Блъгарїꙗ<br>{{lat-ga|България}}
-| ꙁнамѧ= [[Дѣ́ло:Flag of Bulgaria.svg|border|150px]]
-| ꙁнакъ = [[Дѣ́ло:Coat_of_arms_of_Bulgaria.svg|80px]]
+| знамѧ= [[Дѣ́ло:Flag of Bulgaria.svg|border|150px]]
+| знакъ = [[Дѣ́ло:Coat_of_arms_of_Bulgaria.svg|80px]]
 | map = EU location BUL.png
-| Рєчєниѥ = {{lat-ga|Съединението прави силата}}
+| Речениѥ = {{lat-ga|Съединението прави силата}}
 | Стольнъ градъ = [[Софі́ꙗ]]
-| Ѩꙁꙑкъ = [[Блъга́рьскъ ѩꙁꙑ́къ|блъга́рьскъ]]
+| Ѩзыкъ = [[Блъга́рьскъ ѩꙁꙑ́къ|блъга́рьскъ]]
 | Глава = Гєѡ́ргїи Пръвановъ
 | Пространиѥ = 110 910 к҃м²
 | Людии = 7,7 лєѡ́дръ
