*Empty MediaWiki Message*

--- a/Слъньцє.mw
+++ b/Слъньцє.mw
@@ -1,5 +1,5 @@
 [[Image:Sun920607.jpg|right|thumb|Слъньце]]
-'''Слъньце''' [[sвѣзда]] ѥстъ, вьсѣхъ sвѣздъ намъ ближьши. 
+'''Слъньце''' [[Ꙃвѣꙁда|sвѣзда]] ѥстъ, вьсѣхъ sвѣздъ намъ ближьши. 
 
 [[Category:Sвѣзды]]
 
