--- a/Слъньцє.mw
+++ b/Слъньцє.mw
@@ -1,7 +1,7 @@
 [[Image:Sun920607.jpg|right|thumb|Слъньце]]
 '''Слъньце''' [[Ꙃвѣꙁда|sвѣзда]] ѥстъ, вьсѣхъ sвѣздъ намъ ближьши. 
 
-[[Category:Ꙃвѣꙁды]]
+[[Category:Sвѣзды]]
 
 {{Link FA|ru}}
 {{Link FA|tr}}
