--- a/Слъньцє.mw
+++ b/Слъньцє.mw
@@ -1,7 +1,7 @@
-[[Image:Sun920607.jpg|right|thumb|Слъньце]]
-'''Слъньце''' [[Ꙃвѣꙁда|sвѣзда]] ѥстъ, вьсѣхъ sвѣздъ намъ ближьши. 
+[[Дѣ́ло:Sun920607.jpg|right|thumb|Слъньцє]]
+'''Слъньцє''' [[Ꙃвѣꙁда|sвѣꙁда]] ѥстъ, вьсѣхъ sвѣꙁдъ намъ ближьши.
 
-[[Category:Sвѣзды]]
+[[Category:Ꙃвѣздꙑ]]
 
 {{Link FA|ru}}
 {{Link FA|tr}}
