--- a/Хрїстїаньство.mw
+++ b/Хрїстїаньство.mw
@@ -152,7 +152,7 @@
 [[vi:Kitô giáo]]
 [[vls:Christndom]]
 [[wa:Crustinnisse]]
-[[war:Kristiyanismo]]
+[[war:Kristyanismo]]
 [[yi:קריסטנטום]]
 [[yo:Ẹ̀sìn Kristi]]
 [[zh:基督教]]
