*Empty MediaWiki Message*

--- a/Мѣнскъ.mw
+++ b/Мѣнскъ.mw
@@ -7,7 +7,7 @@
 | Основанъ = 1067
 | Харта = [[Видъ:Minsk-pos.jpg|200 px]]
 |}}
-'''Мѣньскъ''' ({{Lang-be|Мінск, Менск}}, {{Lang-ru|Минск}}) [[стольнъ градъ]] [[Бѣла Рѹсь|Бѣлы Рѹси]] ѥстъ. Глава Мѣньска [[Михаилъ Павловъ]] ѥстъ. Мѣньскъ градъ-ирѡи ѥстъ. На рѣцѣ [[Свислочь (рѣка)|Свислочи]] построѥнъ ѥстъ, помѣновенъ же запрьва лѣтописи лѣта 1067 ѥстъ.
+'''Мѣньскъ''' ({{Lang-be|Менск, Мінск}}, {{Lang-ru|Минск}}) [[стольнъ градъ]] [[Бѣла Рѹсь|Бѣлы Рѹси]] ѥстъ. Глава Мѣньска [[Михаилъ Павловъ]] ѥстъ. Мѣньскъ градъ-ирѡи ѥстъ. На рѣцѣ [[Свислочь (рѣка)|Свислочи]] построѥнъ ѥстъ, помѣновенъ же запрьва лѣтописи лѣта 1067 ѥстъ.
 
 [[Катигорї:Гради]]
 [[Катигорї:Бѣла Рѹсь]]
