--- a/Сѣвєрьна_Амєрїка.mw
+++ b/Сѣвєрьна_Амєрїка.mw
@@ -10,7 +10,7 @@
 [[af:Noord-Amerika]]
 [[als:Nordamerika]]
 [[am:ስሜን አሜሪካ]]
-[[an:America d'o Norte]]
+[['o Norte]]
 [[ang:Norðamerica]]
 [[ar:أمريكا الشمالية]]
 [[arc:ܐܡܪܝܩܐ ܕܓܪܒܝܐ]]
