Reverted edits by [[Special:Contributions/93.191.79.30|93.191.79.30]] ([[User talk:93.191.79.30|Talk]]) to last version by [[User:Xqbot|Xqbot]]

--- a/Їꙁдраил҄ь.mw
+++ b/Їꙁдраил҄ь.mw
@@ -10,7 +10,7 @@
 | Почѧта = 1948
 }}
 
-'''Їꙁдраил҄ь''' и {{lang-he| ישראל }} · {{lang-ar|إسرائيل}} · ѥ́стъ дрьжа́ва ꙁападьнѣи [[Асі́ꙗ|Асі́и]] ⁙ Дрьжа́вьна ѩꙁꙑ́ка [[евреискъ ѩзыкъ|єврєискъ]] и [[аравьскъ ѩзыкъ|аравьскъ]] ѥста́ ⁙ Сто́льнъ гра́дъ Їꙁдраилѩ [[Їєроусали́мъ]] ѥ́сть ⁙ Люди́и 7 лєѡ́дръ обита́ѥтъ.
+'''Їꙁдраил҄ь''' и {{lang-he| ישראל }} · {{lang-ar|إسرائيل}} · ѥ́стъ дрьжа́ва ꙁападьнѣи [[Асі́ꙗ|Асі́и]] ⁙ Дрьжа́вьна ѩꙁꙑ́ка [[евреискъ ѩзыкъ|єврєискъ]] и [[аравьскъ ѩзыкъ|аравьскъ]] ѥстє́ ⁙ Сто́льнъ гра́дъ Їꙁдраилѩ [[Їєроусали́мъ]] ѥ́сть ⁙ Люди́и 7 лєѡ́дръ обита́ѥтъ.
 
 == їсторі́ꙗ ==
 
