/* ꙁьри́ та́кождє */

--- a/Їллѷрїиска_Словѣнїꙗ.mw
+++ b/Їллѷрїиска_Словѣнїꙗ.mw
@@ -40,6 +40,8 @@
 {{Словѣньскы дрьжавы}}
 [[Category:Їллѷрі́иска Словѣні́ꙗ|*]]
 
+* [http://slovenia.mons.hr Slovenia]
+
 [[af:Slowenië]]
 [[als:Slowenien]]
 [[am:ስሎቬኒያ]]
