*Empty MediaWiki Message*

--- a/Грьци.mw
+++ b/Грьци.mw
@@ -1,66 +1,66 @@
-{{Дрьжава|name = Грьчьска Димократїꙗ<br>Ελληνική Δημοκρατία
+{{Дрьжава|name = Грь́чьска Димократі́ꙗ<br>Ελληνική Δημοκρατία
 | знамѧ= [[Видъ:Flag of Greece.svg|150px]]
 | знакъ = [[image:Coat_of_arms_of_Greece.svg|80px]]
 | map = EU location GRE.png
 | Речениѥ = Ελευθερία ή θάνατος
-| Стольнъ градъ = [[Аѳины]]
-| Ѩзыкъ = [[Грьчьскъ ѩзыкъ|грьчьскъ]]
-| Глава = Каролъ Попѹлїꙗ
+| Стольнъ градъ = [[Аѳи́нꙑ]]
+| Ѩзыкъ = [[Грь́чьскъ ѩꙁꙑ́къ|грь́чьскъ]]
+| Глава = Каролъ Попоулїꙗ
 | Пространиѥ =131 940 к҃м²
-| Людии =  10,9 леѡдръ
+| Людии =  10,9 лєѡ́дръ
 | Почѧта = 1821
 }}
-'''Грьци''' ({{Lang-el|Ελλάδα}}, епїсимьно имѧ '''Грьчьска Димократїꙗ''', {{Lang-el|Ελληνική Δημοκρατία}}) [[Южьна Еѵрѡпа|Южьны Еѵрѡпы]] дрьжава ѥстъ. Стольнъ градъ Грькъ [[Аѳины]] ѥстъ, людии обитаѥтъ 10,9 леѡдръ. Дрьжавьнъ [[Грьчьскъ ѩзыкъ|грьчьскъ]] ѥстъ. Дрьжавьна вѣра [[Православиѥ]] ѥстъ<ref>Виждь Грькъ оуставъ къниѕѣ "''Конституции государств Европейского Союза''". М., 1997, стр. 245—246</ref>.
+'''Грьци''' и {{Lang-el|Ελλάδα}} · єпїсимьно и́мѧ '''Грьчьска Димократі́ꙗ''' и {{Lang-el|Ελληνική Δημοκρατία}} · [[Ю́жьна Єѵрѡ́па|Ю́жьнꙑ Єѵрѡ́пꙑ]] дрьжа́ва ѥ́стъ ⁙ Сто́льнъ гра́дъ Грькъ [[Аѳи́нꙑ]] ѥ́стъ ⁙ Люди́и обитаѥтъ 10,9 лєѡдръ ⁙ Дрьжавьнъ [[грь́чьскъ ѩꙁꙑ́къ]] ѥ́стъ ⁙ Дрьжавьна вѣра [[Православиѥ]] ѥ́стъ<ref>Виждь Грькъ оуставъ къниꙃѣ {{lat-ga|"''Конституции государств европейского Союза''". М., 1997, стр. 245—246}}</ref>
 
-== Їсторїꙗ ==
-[[Видъ:Flag of Greece (1828-1978).svg|thumb|left|Грькь знамѧ (1828—1978).]]1453 лѣта [[Вӱзантїн҄ьска аутократорї]] въшьла въ съставъ Осман҄ьскы аутократорїѩ бѣ. 1821 лѣта по народьнѣ въстании Грьци ѥстъ пакы самостоꙗтел҄ьна дрьжава. По 1833 лѣтѣ ихъже имѧ Грьчьско Кралѥвьство бѣ. По [[Вътораꙗ Свѣтьнаꙗ Воина|Въторѣи Свѣтьнѣи Воинѣ]] Грьци пакы димократїꙗ ѥстъ.
+== їсторі́ꙗ ==
+[[Дѣ́ло:Flag of Greece (1828-1978).svg|thumb|left|Грькь ꙁнамѧ (1828—1978).]]1453 лѣта [[Вѷꙁантїн҄ьска аѵтократорі́ꙗ]] въшьла въ съставъ Осман҄ьскꙑ аѵтократорі́ѩ бѣ ⁙ 1821 лѣта по народьнѣ въстании Грьци ѥ́стъ пакꙑ самостоꙗтєл҄ьна дрьжа́ва ⁙ По 1833 лѣтѣ ихъжє имѧ Грьчьско Кралѥвьство бѣ ⁙ По [[Вътораꙗ Свѣтьнаꙗ Воина|Въторѣи Свѣтьнѣи Воинѣ]] Грьци пакꙑ димократїꙗ ѥстъ.
 
-1981 лѣта Грьци въшьли въ съставъ [[Еѵрѡпьскыи Свѫзъ|Еѵрѡпьска Свѫза]] бѣ.
+1981 лѣта Грьци въшьли въ съставъ [[Єѵрѡ́пьскъ Свѫ́ꙁъ|Єѵрѡ́пьска Свѫ́ꙁа]] бѣ
 
-== Грькъ чѧсти ==
-Грьчьскы Димократїѩ чѧсти перїферїѧ ({{Lang-el|περιφέρειες}}) нарицаютъ. Ихъже малы чѧсти имѧ номи ({{Lang-el|νομός}}) сѫтъ.
+== Грь́къ чѧ́сти ==
+Грь́чьскꙑ Димократі́ѩ чѧ́сти пєрїфєрїѧ ({{Lang-el|περιφέρειες}}) нарицаютъ ⁙ Ихъжє малꙑ чѧсти имѧ номи ({{Lang-el|νομός}}) сѫ́тъ
 {| class="sortable" style="text-align:left; font-size:90%"
 |- style="font-size:100%; text-align:left"
-!width="40px"| Харта !! Число !!width="140px"| Перїферїѩ!!width="80px"| Главьнъ градъ !!width="80px"| Пространиѥ !!width="80px"| Людии обитаѥтъ</tr>
-| rowspan=15 | [[Image:GreeceNumberedPerepheries.png|300px]]
+!width="40px"| Харта !! Число !!width="140px"| Пєрїфєрїѩ!!width="80px"| Гла́вьнъ гра́дъ !!width="80px"| Простра́ниѥ !!width="80px"| Людии обитаѥтъ</tr>
+| rowspan=15 | [[Дѣ́ло:GreeceNumberedPerepheries.png|300px]]
 |-
-| 1 || [[Аттїка]] (Αττική) || [[Аѳины]] || style="text-align:right"|3,808 к҃м²|| style="text-align:right"|3,841,408
+| 1 || [[Аттїка]] (Αττική) || [[Аѳи́нꙑ]] || style="text-align:right"|3,808 к҃м²|| style="text-align:right"|3,841,408
 |-
-| 2 || [[Срѣдьнꙗ Елладь]] (Στερεά Ελλάδα) || [[Ламї]] || style="text-align:right"|15,549 к҃м²|| style="text-align:right"|614,614
+| 2 || [[Срѣ́дьнꙗ Єлла́дь]] (Στερεά Ελλάδα) || [[Ламїꙗ]] || style="text-align:right"|15,549 к҃м²|| style="text-align:right"|614,614
 |-
-| 3 || [[Срѣдьнꙗ Македонїꙗ]] (Κεντρική Μακεδονία) || [[Ѳессалонїка]] ||style="text-align:right"|18,811 к҃м²|| style="text-align:right"|1,931,870
+| 3 || [[Срѣ́дьнꙗ Макєдоні́ꙗ]] (Κεντρική Μακεδονία) || [[Ѳєссалоні́ка]] ||style="text-align:right"|18,811 к҃м²|| style="text-align:right"|1,931,870
 |-
-| 4 || [[Крита]] (Κρήτη) || [[Ираклїѥ]] || style="text-align:right"|6,336 к҃м²|| style="text-align:right"|623,666
+| 4 || [[Кри́та]] (Κρήτη) || [[Ираклїѥ]] || style="text-align:right"|6,336 к҃м²|| style="text-align:right"|623,666
 |-
-| 5 || [[Вьсточьна Македонїꙗ и Ѳрака]] (Ανατολική Μακεδονία και Θράκη) || [[Комотина]] || style="text-align:right"|14,157 к҃м²|| style="text-align:right"|623,248
+| 5 || [[Вьсточьна Макєдоні́ꙗ и Ѳра́ка]] (Ανατολική Μακεδονία και Θράκη) || [[Комотина]] || style="text-align:right"|14,157 к҃м²|| style="text-align:right"|623,248
 |-
-| 6 || [[Ипїръ]] (Ήπειρος) || [[Їѡаннїна]] ||style="text-align:right"|9,203 к҃м²|| style="text-align:right"|358,698
+| 6 || [[И́пїръ]] (Ήπειρος) || [[Їѡаннїна]] ||style="text-align:right"|9,203 к҃м²|| style="text-align:right"|358,698
 |-
-| 7 || [[Їонїискы острова]] (Ιόνια νησιά) || [[Керкѷра]] || style="text-align:right"|2,307 к҃м²|| style="text-align:right"|220,097
+| 7 || [[Їо́нїискꙑ острова]] (Ιόνια νησιά) || [[Кєркѷра]] || style="text-align:right"|2,307 к҃м²|| style="text-align:right"|220,097
 |-
-| 8 || [[Сѣверьны Егеискы острова]] (Βορείου Αιγαίου) || [[Мӱтїлина]] || style="text-align:right"|3,836 km²|| style="text-align:right"|208,151
+| 8 || [[Сѣверьны Єгєискꙑ острова]] (Βορείου Αιγαίου) || [[Мѷтїлина]] || style="text-align:right"|3,836 к҃м²|| style="text-align:right"|208,151
 |-
-| 9 || [[Пелопоннисъ]] (Πελοπόννησος) || [[Трїполь]] || style="text-align:right"|15,490 km²|| style="text-align:right"| 650,310 
+| 9 || [[Пєлопо́ннисъ]] (Πελοπόννησος) || [[Трїполь]] || style="text-align:right"|15,490 к҃м²|| style="text-align:right"| 650,310
 |-
-| 10 || [[Южьны Егеискы острова]] (Νοτίου Αιγαίου) || [[Ермоуполь]] || style="text-align:right"|5,286 km²|| style="text-align:right"|320,001
+| 10 || [[Южьнꙑ Єгєискꙑ острова]] (Νοτίου Αιγαίου) || [[Єрмоуполь]] || style="text-align:right"|5,286 к҃м²|| style="text-align:right"|320,001
 |-
-| 11 || [[Ѳессалїꙗ]] (Θεσσαλία) || [[Ларїса]] || style="text-align:right"|14.037 km²|| style="text-align:right"|760,714
+| 11 || [[Ѳєссалі́ꙗ]] (Θεσσαλία) || [[Ларїса]] || style="text-align:right"|14.037 к҃м²|| style="text-align:right"|760,714
 |-
-| 12 || [[Западьна Елладь]] (Δυτική Ελλάδα) || [[Патра]] || style="text-align:right"|11,350 km²|| style="text-align:right"|753,267
+| 12 || [[Ꙁападьна Єлла́дь]] (Δυτική Ελλάδα) || [[Патра]] || style="text-align:right"|11,350 к҃м²|| style="text-align:right"|753,267
 |-
-| 13 || [[Западьна Македонїꙗ]] (Δυτική Μακεδονία) || [[Козана]] || style="text-align:right"|9,451 km²|| style="text-align:right"|303,857
+| 13 || [[Ꙁападьна Макєдоні́ꙗ]] (Δυτική Μακεδονία) || [[Коꙁана]] || style="text-align:right"|9,451 к҃м²|| style="text-align:right"|303,857
 |-
-| - || [[Аѳѡнъ]] || [[Каруѩ]] || style="text-align:right"|390 km²|| style="text-align:right"|2,250
+| - || [[Аѳѡнъ]] || [[Карѵѩ]] || style="text-align:right"|390 к҃м²|| style="text-align:right"|2,250
 |}
 
-== Грькъ наибол҄ьше гради ==
-* [[Аѳины]] – людии обитаѥтъ 3 761 810.
-* [[Ѳессалонїка]] – людии обитаѥтъ 348 920.
-* [[Патра]] – людии обитаѥтъ 164 741.
-* [[Ираклїѥ]]  – людии обитаѥтъ 140 357.
-* [[Корїнѳъ]] – людии обитаѥтъ 36 555.
+== Грькъ наибол҄ьшє гради ==
+* [[Аѳи́нꙑ]] - люди́и обитаѥтъ 3 761 810.
+* [[Ѳєссалоні́ка]] - люди́и обитаѥтъ 348 920.
+* [[Патра]] - люди́и обитаѥтъ 164 741.
+* [[Ираклїѥ]] - люди́и обитаѥтъ 140 357.
+* [[Ко́рїнѳъ]] - люди́и обитаѥтъ 36 555.
 
-== Зьри такожде ==
+== ꙁьри такождє ==
 {{commonscat|Greece}}
 <references />
 [[Category:Грьци| ]]
